k8s/ingress/deployment-ingress-publicis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world-publicis
  namespace: hello-xke
  labels:
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: for-an-ingress-publicis
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: go-hello-world
      app.kubernetes.io/instance: for-an-ingress-publicis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-hello-world
        app.kubernetes.io/instance: for-an-ingress-publicis
    spec:
      containers:
      - name: go-hello-world
        image: clook/go-hello-world
        ports:
        - containerPort: 8080
