k8s/ingress/service-publicis.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-publicis
  namespace: hello-xke
spec:
  selector:
    app.kubernetes.io/name: go-hello-world
    app.kubernetes.io/instance: for-an-ingress-publicis
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
