k8s/ingress/ingress-publicis.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-publicis
  namespace: hello-xke
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: publicis.allowed.org
    http:
      paths:
      - path: /pseday
        backend:
          serviceName: hello-publicis
          servicePort: 8080
  tls:
  - hosts:
    - publicis.allowed.org
    secretName: hello-publicis-cert-tls
