k8s/ingress/ingress-xke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-xke
  namespace: hello-xke
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: xke.xebia.allowed.org
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-xke
          servicePort: 8080
  tls:
  - hosts:
    - xke.xebia.allowed.org
    secretName: hello-xke-cert-tls
